# SPEX_Update_Test

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  cholupdate.c  doalltest  dochol1  dochol2  dochol3  dochol4  dochol5  dochol6  dochol7  dochol8  dotest1  dotest2  dotest3  dotest4  dotest5  dotest6  dotest7  dotest8  ptest.c  test_optimal.c
Results/: .gitignore
Results/LPnetlib_CholUpdate/: .gitignore
